# monochrome

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py  vcpkg.json
.github/workflows/: Build.yml  GLSL.yml  build.yml
.gitlab/: Dockerfile  Dockerfile.clang  Dockerfile.gcc  Makefile  convert_to_generic_platform_wheel.py
assets/: Icon.pxd  Info.plist  Info.plist.in  Monochrome.desktop  Monochrome.icns  Monochrome.rc  install_uv_unix.sh  logo_with_name.pxd
docs/: api.md  conf.py  development.md  index.md  installation_python.md  installation_standalone.md  refs.bib  tutorial.ipynb
docs/_templates/: custom-module-template.rst
python/: setup.py  test_array3.py  test_filepaths.py
python/fbs/: Array3.py  Array3Meta.py  Data.py  Filepaths.py  Root.py
python/monochrome/: __init__.py  ipc.py  multirecorder.py  utils.py
python/monochrome/fbs/: Array3DataChunku16.py  Array3MetaFlow.py  ArrayDataType.py  ColorMap.py  Data.py  DictEntry.py  Filepaths.py  RecordingTracePos.py  Request.py  ResponseTracePos.py  Root.py  TransferFunction.py  VideoID.py
python/quickVidViewer/: __init__.py  multirecorder.py  utils.py
python/quickVidViewer/fbs/: Array3DataChunk.py  Array3DataChunkf.py  Array3Meta.py  Array3MetaFlow.py  BitRange.py  ColorMap.py  Data.py
python/tests/: test_array.py  test_array3.py  test_filepaths.py  test_flow.py
src/: bmp.cpp  bmp.h  bmp_headers.h  colormap.cpp  colormap.h  contrast_enhancement.h  definitions.h  filereader.h  filereader_formats.h  globals.cpp  globals.h  ipc.cpp  ipc.h  iterators.h  main.cpp  main_window.h  recording.cpp  recording.h  recordingwindow.cpp  recordingwindow.h  recordingwindow_helpers.cpp  recordingwindow_helpers.h  transformations.cpp  transformations.h  ui.h  utils.cpp  utils.h  vectors.h  videorecorder.h
src/cpp/: globals.cpp  globals.h  ipc.cpp  keybindings.cpp  keybindings.h  main.cpp  main_window.h  prm.cpp  prm.h  recording.cpp  recording.h  recordingwindow.cpp  recordingwindow.h  recordingwindow_helpers.cpp  recordingwindow_helpers.h  recordingwindow_rgb.cpp  recordingwindow_rgb.h  transformations.cpp  transformations.h  ui.cpp  ui.h  ui_export.h  ui_main.h  ui_recording.h
src/cpp/fileformats/: AbstractFile.h  BmpFile.h  BmpFileParser.h  CollageFile.h  InMemoryFile.h  NpyFile.h  OmniFile.h  RawFile.h  SplitFile.h  TiffFile.h  TiffFolder.h  all_formats.cpp  all_formats.h
src/cpp/macOS/: GLFWCustomDelegate.h  GLFWCustomDelegate.mm
src/cpp/ui/: export.h  main.h  recording.h  recording_controls.h  recording_histogram.h  recording_points.h  recording_traces.h
src/cpp/utils/: ImGuiConnector.cpp  ImGuiConnector.h  colormap.cpp  colormap.h  colormap_generate_cpp.py  definitions.h  files.cpp  files.h  settings.cpp  settings.h  utils.cpp  utils.h  vectors.h  videorecorder.h
src/fileformats/: BmpFile.h  BmpFileParser.h  RawFile.h  all_formats.cpp
src/python/embedded_file_loaders/: README.md  load_encoded_video.py  load_folder.py  load_image.py  load_mat.py  load_micam.py  load_tiff.py
src/python/embedded_plugins/: README.md  load_encoded_video.py  load_folder.py  load_folder_dcm.py  load_image.py  load_image_itk.py  load_mat.py  load_micam.py  load_plugin_test.py  load_tiff.py
src/python/monochrome/: __init__.py  __main__.py  ipc.py  multirecorder.py
src/python/monochrome/fbs/: Array3DataChunkf.py  Array3DataChunku16.py  Array3DataChunku8.py  Array3Meta.py  Array3MetaFlow.py  ArrayDataType.py  BitRange.py  CloseAllVideos.py  CloseVideo.py  Color.py  ColorMap.py  Data.py  DictEntry.py  Filepaths.py  GetMetadata.py  GetTracePos.py  GetTraces.py  MetadataResponse.py  OpacityFunction.py  Pause.py  Play.py  PointsVideo.py  Quit.py  RecordingTrace.py  RecordingTracePos.py  RecordingTraces.py  Request.py  RequestType.py  ResponseTracePos.py  Root.py  SetFrame.py  SetPlaybackSpeed.py  TracePosResponse.py  TracesResponse.py  TransferFunction.py  VideoExport.py  VideoExportFormat.py  VideoID.py  VideoMetadata.py
src/python/tests/: test_array.py  test_filepaths.py  test_flow.py  test_ipc.py
src/schema/: array3.fbs  array3_generated.h  filepath.fbs  filepath_generated.h  generate.sh  message.fbs  message_generated.h
src/shaders/: frame.frag.glsl  frame.vert.glsl  frame_rgb.frag.glsl  points.frag.glsl  points.vert.glsl  trace.geom.glsl  trace.vert.glsl
src/utils/: colormap.cpp  colormap.h  definitions.h  plot_utils.h  utils.cpp  utils.h
